# cc-vibecode

./: .gitignore  .gitmodules  README.md  main.py  prompts.md  prompts.yaml  pyproject.toml
airfold_apps/: git.py  logger.py  neon.py
cc_vibecode/: git.py  neon.py  server.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Dashboard.tsx  Login.tsx  ProjectViewer.tsx  PromptModal.tsx
frontend/src/services/: api.ts
frontend/src/styles/: Dashboard.css  Login.css  ProjectViewer.css  PromptModal.css  global.css
frontend/src/types/: index.ts
